# requestx

./: .gitignore  .readthedocs.yaml  .rustfmt.toml  AGENTS.md  BUILD_SYSTEM.md  CLAUD.md  CLAUDE.md  Cargo.toml  Makefile  README.md  TESTING.md  benchmark_payload_sizes.sh  benchmark_results.db  bump.sh  config.toml  event_hook_example.md  mkdocs.yml  performance.db  performance_results.txt  pyproject.toml  redirect.example.md  run_post_benchmarks.py  run_post_cli.sh  sonic_json_performance_summary.md  task.md  todos.md  url.example.doc.md  url.exmple.rs
.cargo/: config.toml
.github/: FUNDING.yml  PUBLISHING.md
.github/workflows/: build-wheels.yml  cd.yml  ci.yml  publish.yml  release.yml  test-release.yml  test.yml
.kiro/specs/requestx-http-client/: design.md  refactoring.md  requirements.md  tasks.md
.kiro/steering/: tech.md
docs/: BUSINESS_IMPACT.md  SDK_INTEGRATION_TESTS_COMPLETION_SUMMARY.md  async-guide.md  authentication.md  benchmarking.rst  benchmarks.rst  build-system.rst  changelog.md  changelog.rst  conf.py  configuration.md  configuration.rst  connection-pooling-examples.md  contributing.md  contributing.rst  index.md  index.rst  installation.md  p1.md  p2.md  performance.rst  publishing.rst  pyo3-028-performance-best-practices.md  quickstart.md  quickstart.rst  release-pipeline.rst  requestx-reqwest-refactoring.md  requirements.txt  streaming.md  testing.rst
docs/_build/doctrees/: README.doctree  async-guide.doctree  benchmarks.doctree  changelog.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  migration.doctree  performance.doctree  quickstart.doctree
docs/_build/doctrees/api/: index.doctree
docs/_build/doctrees/examples/: basic-usage.doctree  index.doctree
docs/_build/html/: benchmarks.html  objects.inv  performance.html
docs/api/: client.md  exceptions.md  exceptions.rst  functions.md  functions.rst  index.md  response.md  response.rst  session.rst
docs/benchmarks/: json_performance_report.md
docs/examples/: advanced.md  basic-usage.md  index.rst
docs/plans/: 2026-02-25-sdk-compatibility-design.md  2026-02-28-sdk-integration-tests-design.md  2026-02-28-sdk-integration-tests.md
docs/user-guide/: index.rst
http_benchmark/: benchmark.py
http_benchmark/clients/: aiohttp_adapter.py  httpx_adapter.py  requestx_adapter.py
http_benchmark/utils/: resource_monitor.py
httpbin_server/: docker-compose.httpbin-go.yml  docker-compose.httpbin.yml  docker-compose.traefik.yml  nginx.conf
httpbin_server/certs/: server.crt  server.key
httpbin_server/traefik/dynamic/: httpbin-routing.yml
python/requestx/: AGENTS.md  __init__.py  _api.py  _async_client.py  _auth.py  _client.py  _client_common.py  _compat.py  _exceptions.py  _request.py  _response.py  _streams.py  _transports.py  _utils.py  benchmark.py  profiler.py
scripts/: benchmark.py  generate_performance_report.py  performance_database.py  release.py  requestx-benchmark  requestx-benchmark.py  requestx-locust.py  test_installation.py  test_pipeline.sh  test_release.py  validate_release_pipeline.py  version-sync.sh
src/: AGENTS.md  api.rs  async_client.rs  auth.rs  client.rs  client_common.rs  common.rs  config.rs  cookies.rs  error.rs  exceptions.rs  headers.rs  lib.rs  multipart.rs  profiling.rs  queryparams.rs  request.rs  response.rs  session.rs  streaming.rs  timeout.rs  transport.rs  types.rs  url.rs
src/core/: AGENTS.md  client.rs  http_client.rs  mod.rs  runtime.rs
src/core/client/: auth.rs  body.rs  mod.rs  redirect.rs
src/python_interface/: mod.rs  response_mapper.rs
src/python_interface/kwargs/: auth.rs  body.rs  config.rs  headers.rs  mod.rs  params.rs
src/types/: headers.rs  mod.rs
tests/: README.md  __init__.py  config.toml  conftest.py  json_performance_summary.md  run_all_tests.py  run_tests.py  test_advanced_features.py  test_advanced_integration.py  test_async.py  test_async_runtime.py  test_authentication.py  test_basic.py  test_benchmarks.py  test_bindings.py  test_bindings_simple.py  test_comprehensive.py  test_concurrency_issues.py  test_core_client.py  test_coverage.py  test_error_handling.py  test_exceptions_utilities.py  test_features.py  test_file_uploads.py  test_final_suite.py  test_integration.py  test_integration_comprehensive.py  test_performance.py  test_quickstart.py  test_requests_compatibility.py  test_response.py  test_response_enhanced.py  test_retry_logic.py  test_session.py  test_session_enhanced.py  test_sync.py
tests/benchmark/: test_loki_logger.py  test_profiler.py  test_quick_benchmark.py
tests/performance/: payload_100kb.json  payload_10kb.json  payload_1kb.json  payload_50b.json
tests/test_post/: benchmark_results.json  payload_1mb.json  payload_2mb.json  payload_512kb.json  run_benchmarks.py  test_post.md
tests_benchmark/: __init__.py  test_benchmark.py  test_profiler.py  test_quick_benchmark.py
tests_httpx/: conftest.py
tests_httpx/models/: test_whatwg.py
tests_integration/: __init__.py  conftest.py  test_anthropic_integration.py  test_openai_integration.py  utils.py
tests_performance/: __init__.py  conftest.py  test_concurrency_comparison.py  test_simple_get_async.py  test_simple_get_sync.py  test_stream.py
tests_refactoring/: optimization-buffer-size.md  optimization-http2-initial-connection-window-size.md  optimization-http2-initial-stream-window-size.md  optimization-pool-idle-timeout.md  optimization-pool-max-idle-per-host.md  todo.md
tests_requestx/: conftest.py  test_api.py  test_asgi.py  test_auth.py  test_config.py  test_content.py  test_decoders.py  test_exceptions.py  test_exported_members.py  test_multipart.py  test_sdk_compatibility.py  test_status_codes.py  test_timeouts.py  test_utils.py  test_wsgi.py
tests_requestx/client/: test_async_client.py  test_auth.py  test_client.py  test_cookies.py  test_event_hooks.py  test_headers.py  test_properties.py  test_proxies.py  test_queryparams.py  test_redirects.py
tests_requestx/models/: test_cookies.py  test_headers.py  test_queryparams.py  test_requests.py  test_responses.py  test_url.py  test_whatwg.py
(+1 files in other folders)
