[package]
name = "requestx"
version = "0.2.12"
edition = "2021"
description = "High-performance HTTP client for Python with requests-compatible API"
authors = ["RequestX Team"]
license = "MIT"
repository = "https://github.com/neuesql/requestx"
homepage = "https://github.com/neuesql/requestx"
readme = "README.md"

[lib]
name = "requestx"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module", "abi3-py38"] }
pyo3-async-runtimes = { version = "0.25.0", features = ["tokio-runtime"] }
hyper = { version = "1.0", features = ["full", "client", "http1", "http2"] }
hyper-tls = "0.6"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2"] }
tokio = { version = "1.47.1", features = ["full"] }
cookie_store = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.0"
url = "2.0"
urlencoding = "2.1"
thiserror = "1.0"
pythonize = "0.25.0"
base64 = "0.21"
toml = "0.8"

[build-dependencies]
pyo3-build-config = "0.25.0"