[package]
name = "requestx"
version = "1.0.8"
edition = "2021"
description = "High-performance Python HTTP client based on reqwest"
license = "MIT"

[lib]
name = "requestx"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.27", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }

# Reqwest for HTTP
reqwest = { version = "0.13", features = [
    "blocking",
    "json",
    "query",
    "form",
    "cookies",
    "gzip",
    "brotli",
    "deflate",
    "zstd",
    "multipart",
    "stream",
    "rustls",
    "socks",
    "http2",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
sonic-rs = "0.5"

# URL handling
url = "2"
urlencoding = "2"

# Bytes
bytes = "1"

# HTTP types
http = "1"

# For multipart
mime = "0.3"
mime_guess = "2"

# Futures
futures = "0.3"

# Base64 encoding
base64 = "0.22"

# Thread-safe primitives
parking_lot = "0.12"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
