[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "requestx"
version = "0.1.0"
description = "High-performance Python HTTP client based on reqwest (Rust)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP",
]
keywords = ["http", "client", "async", "rust", "reqwest", "httpx"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",  # for comparison tests
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "requestx._core"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
