[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "requestx"
version = "0.1.0"
description = "High-performance Python HTTP client based on reqwest (Rust)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP",
]
keywords = ["http", "client", "async", "rust", "reqwest", "httpx"]

[project.optional-dependencies]
dev = [
    # building PyO3
    "maturin>=1.11.5,<2.0",
    # Testing
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    # Comparison tests
    "httpx>=0.24",
    "requests>=2.32.5",
    # Code quality
    "black>=24.8.0",
    "ruff>=0.12.5",
    "mypy>=1.14.1",
    # Documentation
    "furo>=2024.8.6",
    "myst-parser>=3.0.1",
    "sphinx>=7.1.2",
    "sphinx-autodoc-typehints>=2.0.1",
    "sphinx-copybutton>=0.5.2",
    # HTTP Peformance Testing
     "http-client-benchmarker>=5.1.0"
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "requestx._core"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
