[build-system]
requires = ["maturin>=1.11.5,<2.0"]
build-backend = "maturin"

[project]
name = "requestx"
version = "1.0.9"
description = "Highest-performance Python HTTP client based on Rust Speed"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Qunfei Wu", email = "wu.qunfei@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP",
]
keywords = ["http", "client", "async", "rust", "reqwest", "httpx"]

[dependency-groups]
dev = [
    # building PyO3
    "maturin>=1.11.5,<2.0",
    # Testing
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "anyio>=4.0.0",
    # Performance testing
    "http-client-benchmarker>=5.1.4",
    "aiohttp>=3.9.0",
    # Comparison tests
    "httpx>=0.24",
    "requests>=2.32.5",
    # Code quality
    "black>=24.8.0",
    "ruff>=0.12.5",
    "mypy>=1.14.1",
    # Documentation (MkDocs)
    "mkdocs>=1.5.0",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.8.0",
    "pymdown-extensions>=10.0",
    # tests-requests dependencies
    "httpx>=0.28.1",
    "trustme>=1.0.0",
    "cryptography>=41.0.0",
    "uvicorn>=0.30.0",
    "sniffio>=1.3.0",
    "trio>=0.25.0",
    "chardet>=5.0.0",
    "zstandard>=0.22.0",
    "httpcore>=1.0.0",
    "click>=8.0.0",
    "certifi>=2024.0.0",
    # Optional protocol/encoding support
    "h2>=4.0.0",
    "brotli>=1.0.0",
    "socksio>=1.0.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "requestx._core"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "network: marks tests that require network access",
]
